package : Add cpuminer-multi package

--- a/package/Config.in
+++ b/package/Config.in
@@ -2240,6 +2240,7 @@ menu "Miscellaneous"
 	source "package/clamav/Config.in"
 	source "package/collectd/Config.in"
 	source "package/collectl/Config.in"
+	source "package/cpuminer-multi/Config.in"
 	source "package/domoticz/Config.in"
 	source "package/empty/Config.in"
 	source "package/gitlab-runner/Config.in"
